--- a/src/TimeReporting/Pages/Shared/_LoginPartial.cshtml
+++ b/src/TimeReporting/Pages/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
 @using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Mvc.RazorPages
 @using TimeReporting.Models
 
 @inject SignInManager<Employee> SignInManager
@@ -9,7 +10,7 @@
 {
   <div>
     <div class="d-flex flex-column align-items-center">
-      <h3>Time Reporting</h3>
+      @await Component.InvokeAsync("Timer")
       <hr class="mb-3 mx-3 w-100">
     </div>
     <ul class="nav flex-column">
